cmake_minimum_required(VERSION 3.5)

project(easywsclient)

if (APPLE)
  SET(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Wextra -Wpedantic -Wdeprecated-declarations -Wno-unknown-pragmas -Wno-unused-parameter")
  set(CMAKE_CXX_FLAGS_DEBUG "-g -o0 -D_DEBUG -DDEBUG")
  set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -DRELEASE")
elseif (UNIX)
  SET(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Wpedantic -Wdeprecated-declarations -Wno-unknown-pragmas -Wno-unused-parameter")
  set(CMAKE_CXX_FLAGS_DEBUG "-g -o0 -D_DEBUG -DDEBUG")
  set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -DRELEASE")
elseif (MSVC)
  set(CMAKE_CXX_FLAGS "/DWIN32 /D_WINDOWS /DUNICODE /D_UNICODE /D_CRT_SECURE_NO_WARNINGS /D_CRT_NON_CONFORMING_SWPRINTFS /Zm1000 /bigobj /EHsc /GR /MP /Oy- /W4 /wd4100 /wd4244 /wd4267 /wd4312 /wd4355 /wd4456 /wd4458 /wd4477")
  set(CMAKE_CXX_FLAGS_DEBUG "/Od /Zi /RTC1 /D_DEBUG /DDEBUG")
  set(CMAKE_CXX_FLAGS_RELEASE "/Gy /O2 /Oi /GL- /DNDEBUG /DRELEASE")
endif ()

add_library(easywsclient STATIC easywsclient/easywsclient.hpp easywsclient/easywsclient.cpp)
target_include_directories(easywsclient PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> $<INSTALL_INTERFACE:include>)

install(EXPORT easywsclient DESTINATION cmake)  
install(FILES easywsclientConfig.cmake DESTINATION cmake)
install(TARGETS easywsclient EXPORT easywsclient DESTINATION lib)
install (FILES easywsclient/easywsclient.hpp DESTINATION include/easywsclient)
if(MSVC)
  target_compile_options(easywsclient PRIVATE "$<$<CONFIG:Debug>:/Fd$<TARGET_FILE_DIR:easywsclient>/easywsclient${CMAKE_DEBUG_POSTFIX}.pdb>")
  target_compile_options(easywsclient PRIVATE "$<$<CONFIG:Release>:/Fd$<TARGET_FILE_DIR:easywsclient>/easywsclient.pdb>")
  install(FILES "$<TARGET_FILE_DIR:easywsclient>/easywsclient${CMAKE_DEBUG_POSTFIX}.pdb" DESTINATION lib CONFIGURATIONS Debug OPTIONAL)
  install(FILES "$<TARGET_FILE_DIR:easywsclient>/easywsclient.pdb" DESTINATION lib CONFIGURATIONS Release OPTIONAL)
endif()
